rgbds-0.6.1/test/asm/local-without-parent.err
error: local-without-parent.asm(2):
    Local label '.test' in main scope
error: Assembly aborted (1 error)!
