rgbds-0.6.1/test/asm/local-without-parent.asm
SECTION "Test", ROM0
.test:
